# INfamis

./: .env.example  .gitignore  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml
.claude/: .gitignore  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-test.yml  docs-check.yml  docs.yml  frontend-test.yml  sbom.yml  security-scan.yml
adr/: index.html
adr/001-template-customization/: index.html
adr/002-tailwind-only/: index.html
architecture/overview/: index.html
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: projects.py  router.py
backend/app/auth/: __init__.py
backend/app/db/: engine.py
backend/app/models/: __init__.py  project.py
backend/app/schemas/: __init__.py  project.py
backend/app/services/: __init__.py
backend/tests/: conftest.py  test_health.py  test_projects.py
contributing/agent-coordination/: index.html
contributing/coding-standards/: index.html
contributing/getting-started/: index.html
deployment/configuration/: index.html
deployment/production/: index.html
deployment/quickstart/: index.html
docs/: index.md
e2e/: package-lock.json  package.json  playwright.config.ts
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: check_template_docs.py
search/: search_index.json
(+35 files in other folders)
